--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~7.2.0",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "glyphicons": "^0.2.0",
     "jquery": "^3.3.1",
     "popper": "^1.0.1",
     "rxjs": "~6.3.3",
